@@ -91,7 +91,7 @@ struct input {
   /* Function to read one line.  If FP is NULL, read_fn better not
      be one which uses fp; in particular, read_always_fail() is
      recommended. */
-  bool (*read_fn) P_((struct input *));	/* read one line */
+  bool (*read_fn) (struct input *);	/* read one line */
 
   char *out_file_name;
 
@@ -132,7 +132,7 @@ static struct append_queue *append_tail = NULL;
 
 /* increase a struct line's length, making some attempt at
    keeping realloc() calls under control by padding for future growth.  */
-static void resize_line P_((struct line *, size_t));
+static void resize_line (struct line *, size_t);
 static void
 resize_line(lb, len)
   struct line *lb;
@@ -165,7 +165,7 @@ resize_line(lb, len)
 }
 
 /* Append `length' bytes from `string' to the line `to'. */
-static void str_append P_((struct line *, const char *, size_t));
+static void str_append (struct line *, const char *, size_t);
 static void
 str_append(to, string, length)
   struct line *to;
@@ -201,14 +201,9 @@ str_append(to, string, length)
       }
 }
 
-static void str_append_modified P_((struct line *, const char *, size_t,
-				    enum replacement_types));
 static void
-str_append_modified(to, string, length, type)
-  struct line *to;
-  const char *string;
-  size_t length;
-  enum replacement_types type;
+str_append_modified(struct line *to, const char *string, size_t length,
+		    enum replacement_types type)
 {
   mbstate_t from_stat;
 
@@ -279,7 +274,7 @@ str_append_modified(to, string, length, type)
 
 /* Initialize a "struct line" buffer.  Copy multibyte state from `state'
    if not null.  */
-static void line_init P_((struct line *, struct line *, size_t initial_size));
+static void line_init (struct line *, struct line *, size_t initial_size);
 static void
 line_init(buf, state, initial_size)
   struct line *buf;
@@ -300,7 +295,7 @@ line_init(buf, state, initial_size)
 
 /* Reset a "struct line" buffer to length zero.  Copy multibyte state from
    `state' if not null.  */
-static void line_reset P_((struct line *, struct line *));
+static void line_reset (struct line *, struct line *);
 static void
 line_reset(buf, state)
   struct line *buf, *state;
@@ -320,7 +315,7 @@ line_reset(buf, state)
 /* Copy the contents of the line `from' into the line `to'.
    This destroys the old contents of `to'.
    Copy the multibyte state if `state' is true. */
-static void line_copy P_((struct line *from, struct line *to, int state));
+static void line_copy (struct line *from, struct line *to, int state);
 static void
 line_copy(from, to, state)
   struct line *from;
@@ -354,7 +349,7 @@ line_copy(from, to, state)
 
 /* Append the contents of the line `from' to the line `to'.
    Copy the multibyte state if `state' is true. */
-static void line_append P_((struct line *from, struct line *to, int state));
+static void line_append (struct line *from, struct line *to, int state);
 static void
 line_append(from, to, state)
   struct line *from;
@@ -371,7 +366,7 @@ line_append(from, to, state)
 
 /* Exchange two "struct line" buffers.
    Copy the multibyte state if `state' is true. */
-static void line_exchange P_((struct line *a, struct line *b, int state));
+static void line_exchange (struct line *a, struct line *b, int state);
 static void
 line_exchange(a, b, state)
   struct line *a;
@@ -396,7 +391,7 @@ line_exchange(a, b, state)
 
 
 /* dummy function to simplify read_pattern_space() */
-static bool read_always_fail P_((struct input *));
+static bool read_always_fail (struct input *);
 static bool
 read_always_fail(input)
   struct input *input UNUSED;
@@ -404,7 +399,7 @@ read_always_fail(input)
   return false;
 }
 
-static bool read_file_line P_((struct input *));
+static bool read_file_line (struct input *);
 static bool
 read_file_line(input)
   struct input *input;
@@ -427,7 +422,7 @@ read_file_line(input)
 }
 
 
-static inline void output_missing_newline P_((struct output *));
+static inline void output_missing_newline (struct output *);
 static inline void
 output_missing_newline(outf)
   struct output *outf;
@@ -439,7 +434,7 @@ output_missing_newline(outf)
     }
 }
 
-static inline void flush_output P_((FILE *));
+static inline void flush_output (FILE *);
 static inline void
 flush_output(fp)
   FILE *fp;
@@ -448,7 +443,7 @@ flush_output(fp)
     ck_fflush(fp);
 }
 
-static void output_line P_((const char *, size_t, int, struct output *));
+static void output_line (const char *, size_t, int, struct output *);
 static void
 output_line(text, length, nl, outf)
   const char *text;
@@ -470,7 +465,7 @@ output_line(text, length, nl, outf)
   flush_output(outf->fp);
 }
 
-static struct append_queue *next_append_slot P_((void));
+static struct append_queue *next_append_slot (void);
 static struct append_queue *
 next_append_slot()
 {
@@ -489,7 +484,7 @@ next_append_slot()
   return append_tail = n;
 }
 
-static void release_append_queue P_((void));
+static void release_append_queue (void);
 static void
 release_append_queue()
 {
@@ -506,7 +501,7 @@ release_append_queue()
   append_head = append_tail = NULL;
 }
 
-static void dump_append_queue P_((void));
+static void dump_append_queue (void);
 static void
 dump_append_queue()
 {
@@ -544,7 +539,7 @@ dump_append_queue()
 
 
 /* Compute the name of the backup file for in-place editing */
-static char *get_backup_file_name P_((const char *));
+static char *get_backup_file_name (const char *);
 static char *
 get_backup_file_name(name)
   const char *name;
@@ -577,7 +572,7 @@ get_backup_file_name(name)
 }
 
 /* Initialize a struct input for the named file. */
-static void open_next_file P_((const char *name, struct input *));
+static void open_next_file (const char *name, struct input *);
 static void
 open_next_file(name, input)
   const char *name;
@@ -678,7 +673,7 @@ open_next_file(name, input)
 
 
 /* Clean up an input stream that we are done with. */
-static void closedown P_((struct input *));
+static void closedown (struct input *);
 static void
 closedown(input)
   struct input *input;
@@ -722,7 +717,7 @@ closedown(input)
 }
 
 /* Reset range commands so that they are marked as non-matching */
-static void reset_addresses P_((struct vector *));
+static void reset_addresses (struct vector *);
 static void
 reset_addresses(vec)
      struct vector *vec;
@@ -741,7 +736,7 @@ reset_addresses(vec)
 
 /* Read in the next line of input, and store it in the pattern space.
    Return zero if there is nothing left to input. */
-static bool read_pattern_space P_((struct input *, struct vector *, int));
+static bool read_pattern_space (struct input *, struct vector *, int);
 static bool
 read_pattern_space(input, the_program, append)
   struct input *input;
@@ -786,7 +781,7 @@ read_pattern_space(input, the_program, append)
 }
 
 
-static bool last_file_with_data_p P_((struct input *));
+static bool last_file_with_data_p (struct input *);
 static bool
 last_file_with_data_p(input)
   struct input *input;
@@ -811,7 +806,7 @@ last_file_with_data_p(input)
 }
 
 /* Determine if we match the `$' address. */
-static bool test_eof P_((struct input *));
+static bool test_eof (struct input *);
 static bool
 test_eof(input)
   struct input *input;
@@ -832,7 +827,7 @@ test_eof(input)
 
 /* Return non-zero if the current line matches the address
    pointed to by `addr'. */
-static bool match_an_address_p P_((struct addr *, struct input *));
+static bool match_an_address_p (struct addr *, struct input *);
 static bool
 match_an_address_p(addr, input)
   struct addr *addr;
@@ -870,7 +865,7 @@ match_an_address_p(addr, input)
 }
 
 /* return non-zero if current address is valid for cmd */
-static bool match_address_p P_((struct sed_cmd *, struct input *));
+static bool match_address_p (struct sed_cmd *, struct input *);
 static bool
 match_address_p(cmd, input)
   struct sed_cmd *cmd;
@@ -949,7 +944,7 @@ match_address_p(cmd, input)
 }
 
 
-static void do_list P_((int line_len));
+static void do_list (int line_len);
 static void
 do_list(line_len)
      int line_len;
@@ -1010,13 +1005,8 @@ do_list(line_len)
 }
 
 
-static void append_replacement P_((struct line *, struct replacement *,
-				   struct re_registers *));
-static void
-append_replacement (buf, p, regs)
-  struct line *buf;
-  struct replacement *p;
-  struct re_registers *regs;
+static void append_replacement (struct line *buf, struct replacement *p,
+				struct re_registers *regs)
 {
   enum replacement_types repl_mod = 0;
 
@@ -1056,7 +1046,7 @@ append_replacement (buf, p, regs)
     }
 }
 
-static void do_subst P_((struct subst *));
+static void do_subst (struct subst *);
 static void
 do_subst(sub)
   struct subst *sub;
@@ -1217,7 +1207,7 @@ do_subst(sub)
 
 static countT branches;
 
-static countT count_branches P_((struct vector *));
+static countT count_branches (struct vector *);
 static countT
 count_branches(program)
   struct vector *program;
@@ -1240,7 +1230,7 @@ count_branches(program)
   return cnt;
 }
 
-static struct sed_cmd *shrink_program P_((struct vector *, struct sed_cmd *));
+static struct sed_cmd *shrink_program (struct vector *, struct sed_cmd *);
 static struct sed_cmd *
 shrink_program(vec, cur_cmd)
   struct vector *vec;
@@ -1267,7 +1257,7 @@ shrink_program(vec, cur_cmd)
 
 /* Execute the program `vec' on the current input line.
    Return exit status if caller should quit, -1 otherwise. */
-static int execute_program P_((struct vector *, struct input *));
+static int execute_program (struct vector *, struct input *);
 static int
 execute_program(vec, input)
   struct vector *vec;
